Add link to Fulfillment UX Scorecards

--- a/development/fulfillment/index.html.md.erb
+++ b/development/fulfillment/index.html.md.erb
@@ -307,6 +307,7 @@ We follow the Quad Planning process defined [here](https://about.gitlab.com/hand
 We strive to provide excellent usability in all of our workflows, creating a balance between user and business needs. Product Designers work closely with Product Managers and Engineers. Visit the [Fulfillment User Experience](/handbook/product/ux/stage-group-ux-strategy/fulfillment/) page for details.
 
 In summary,
+- We measure our progres using [UX Scorecards](/handbook/product/ux/ux-scorecards/) and [Category Maturity Scorecards](/handbook/product/ux/category-maturity/category-maturity-scorecards/). See our [UX Health](/handbook/product/ux/stage-group-ux-strategy/fulfillment/#ux-health).
 - We follow the [Product Designer Workflows](/handbook/product/ux/product-designer/).
 - We track user research efforts using `UX Problem Validation` and `UX Solution Validation` labels.
 - We weight issues using the [UX issue weighting process](/handbook/product/ux/product-designer/#ux-issue-weights).
