--- a/product/ux/technical-writing/index.html.md.erb
+++ b/product/ux/technical-writing/index.html.md.erb
@@ -167,17 +167,17 @@ and approval when adding significant changes to their docs.
 
 For collaboration in other projects and subjects:
 
-| Subject                                                                                                         | Assigned technical writer                                            |
-|:----------------------------------------------------------------------------------------------------------------|:---------------------------------------------------------------------|
-| [Development guidelines](#assignments-to-development-guidelines)                                                | [Suzanne Selhorn]                                                    |
-| [Style Guide](#style-guide)                                                                                     | [Suzanne Selhorn]                                                    |
-| [Testing/Vale/markdownlint](#testing)                                                                           | [Diana Logan]                                                        |
-| [Documentation handbook](/handbook/documentation/)                                                              | [Diana Logan]                                                        |
-| [Technical Writing handbook](/handbook/engineering/ux/technical-writing/)                                       | [Susan Tacker]                                                       |
-| [Get started administering GitLab](https://docs.gitlab.com/ee/administration/get_started.html) (CSM onboarding) | [Lyn Landon]                                                         |
-| [Tutorials](https://docs.gitlab.com/ee/tutorials/)                                                              | [Kati Paizee]                                                        |
-| [What's new](https://docs.gitlab.com/ee/administration/whats-new.html)                                          | [Kati Paizee]                                                        |
-| [GitLab Development Kit (GDK)](https://gitlab.com/gitlab-org/gitlab-development-kit)                            | [Axil], [Evan Read], [Marcel Amirault], [Kati Paizee], [Fiona Neill] |
+| Subject                                                                                                         | Assigned technical writer                                                            |
+|:----------------------------------------------------------------------------------------------------------------|:-------------------------------------------------------------------------------------|
+| [Development guidelines](#assignments-to-development-guidelines)                                                | [Suzanne Selhorn]                                                                    |
+| [Style Guide](#style-guide)                                                                                     | [Suzanne Selhorn]                                                                    |
+| [Testing/Vale/markdownlint](#testing)                                                                           | [Diana Logan]                                                                        |
+| [Documentation handbook](/handbook/documentation/)                                                              | [Diana Logan]                                                                        |
+| [Technical Writing handbook](/handbook/engineering/ux/technical-writing/)                                       | [Susan Tacker]                                                                       |
+| [Get started administering GitLab](https://docs.gitlab.com/ee/administration/get_started.html) (CSM onboarding) | [Lyn Landon]                                                                         |
+| [Tutorials](https://docs.gitlab.com/ee/tutorials/)                                                              | [Kati Paizee]                                                                        |
+| [What's new](https://docs.gitlab.com/ee/administration/whats-new.html)                                          | [Kati Paizee]                                                                        |
+| [GitLab Development Kit (GDK)](https://gitlab.com/gitlab-org/gitlab-development-kit)                            | [Axil], [Evan Read], [Marcel Amirault], [Kati Paizee], [Fiona Neill], [Jon Glassman] |
 
 [Amy Qualls]: https://gitlab.com/aqualls
 [Ashraf Khamis]: https://gitlab.com/ashrafkhamis
@@ -203,9 +203,9 @@ For collaboration in other projects and subjects:
 
 The Technical Writing team gets assistance with the `gitlab-docs` project from stable counterparts outside the team.
 
-| Subject  | Person         |
-|:---------|:---------------|
-| Backend reviews | [Ash McKenzie], [David O'Regan] |
+| Subject          | Person                                 |
+|:-----------------|:---------------------------------------|
+| Backend reviews  | [Ash McKenzie], [David O'Regan]        |
 | Frontend reviews | [Lukas 'Eipi' Eipert], [David O'Regan] |
 
 [Ash McKenzie]: https://gitlab.com/ashmckenzie
