Update refinement process for estimation

--- a/development/fulfillment/purchase/index.html.md.erb
+++ b/development/fulfillment/purchase/index.html.md.erb
@@ -47,6 +47,8 @@ If you see issues that are very similar or dependent on each other's solution, c
 
 If you refine an issue suitable for ~onboarding, please make sure that description has all the needed context and detailed explanation.
 
+When assigning weight to issues, it's best to err on caution, especially for issues that require confidential MRs, feature flag releases, etc. which have the tendency to take more effort than originally estimated.
+
 ### Focus on Deliverable issues
 Issues with the Deliverable label assigned to the current Milestone are considered the most vital to the Milestone success. The focus should be on completing these issues ahead of non-deliverable issues. At 7 business days remaining in the Milestone, evaluation of the status of Deliverable issues should be completed by the Engineering Manager. If completion of one or more Deliverable issues is in jeopardy, the Engineering Manager should evaluate if adding more Engineers to those issues will help ensure their completion before the end of the Milestone. If so, multiple Engineers should be assigned to Deliverable issues.
 
