--- a/product/ux/pajamas-design-system/design-review/index.html.md.erb
+++ b/product/ux/pajamas-design-system/design-review/index.html.md.erb
@@ -101,7 +101,7 @@ See the [Pajamas maintainer ratio dashboard](https://app.periscopedata.com/app/g
 | ------- | ------- | ------------------ |
 | Pajamas Design System (Figma) | [Michael Le](https://gitlab.com/mle) | [Jeremy Elder](https://gitlab.com/jeldergl) |
 | Pajamas Design System (Figma) | [Camellia Yang](https://gitlab.com/cam.x) | [Jeremy Elder](https://gitlab.com/jeldergl) |
-| Pajamas Design System (UX)    | [Austin Regnery](https://gitlab.com/aregnery) | [Amelia Bauerly](https://gitlab.com/ameliabauerly) |
+| Pajamas Design System (UX) - PAUSED    | [Austin Regnery](https://gitlab.com/aregnery) | [Amelia Bauerly](https://gitlab.com/ameliabauerly) |
 
 [code-review-guidelines]: https://docs.gitlab.com/ee/development/code_review.html
 [eng-become-maintainer]: /handbook/engineering/workflow/code-review/#how-to-become-a-project-maintainer
