Fixing team page tables for Service Desk

--- a/development/ops/monitor/service-desk/index.html.md.erb
+++ b/development/ops/monitor/service-desk/index.html.md.erb
@@ -42,20 +42,22 @@ Service Ping is used for self-managed customers.  The table below was generated 
     - 4th week of the month - Demo new features and showcase any interesting work done within or outside of our team (in-person or recorded demos).
 
 ## Team members
+
 | Name                 | Role                                          |
 |----------------------|-----------------------------------------------|
-| Oleh Maniavskyi      |  Senior Backend Software Engineer - Team Lead |
-| Emma Konstantynovska | Senior Backend Software Engineer              |
-| Hanna Troian         | Backend Software Engineer                     |
-| Mykhailo Maidanskyi  | Backend Software Engineer                     |
-| Oksana Kyrylchuk     | Senior Frontend Software Engineer             |
-| Yurii Faievskyi      | Frontend Software Engineer                    |
+| [Emma Konstantynovska](https://gitlab.com/emmakonstantynovska-ext) | Senior Backend Software Engineer |
+| [Hanna Troian](https://gitlab.com/htroian-ext) | Backend Software Engineer |
+| [Mykhailo Maisdanskyi](https://gitlab.com/mmaidanskyi-ext) | Backend Software Engineer |
+| [Oksana Kyrylchuk](https://gitlab.com/oksana.kyrylchuk) | Senior Frontend Software Engineer |
+| [Oleh Maniavskyi](https://gitlab.com/oleh.maniavskiy-ext)   | Senior Backend Software Engineer - Team Lead |
+| [Yurii Faievskyi](https://gitlab.com/yfaievskyi-ext)   | Frontend Software Engineer   |
 
 ## Stable counterparts
+
 | Name                 | Role                                          |
 |----------------------|-----------------------------------------------|
 | Alana Bellucci     |  Senior Product Manager |
-| Kevin Chu | Group Product Manager             |
+| Kevin Chu | Group Product Manager          |
 
 
 ## Responsibilities
@@ -64,10 +66,6 @@ Service Ping is used for self-managed customers.  The table below was generated 
 This team maps to the [Respond Group](/handbook/product/categories/#respond-group) category and focuses on:
 
 * [Service Desk](https://about.gitlab.com/direction/monitor/service_desk/)
-
-## Dashboards
-
-<%= partial "handbook/engineering/metrics/partials/_cross_functional_dashboard.erb", locals: { filter_value: "Respond" } %>
 
 ## Working Agreements
 
