Add information on creating follow-up issues

--- a/development/dev/plan/index.html.md.erb
+++ b/development/dev/plan/index.html.md.erb
@@ -207,7 +207,7 @@ process itself.
 
 The DRI is responsible for completing the following actions: 
 * Adding a comment to the retrospective issue summarizing actionable discussion items and suggesting corrective actions.
-* Finding a DRI for each corrective action. 
+* Finding a DRI for each corrective action. Creating an issue in `gl-retrospectives/plan` for each is optional, but doing so and adding the ~"follow-up" label will ensure they're included automatically in the next retrospective. 
 * Recording a short summary video and sharing in #s_plan. This can be discussed in the next weekly team call and can be added to the Plan Stage playlist on Youtube so that it shows up on team pages.
 * Closing the issue and making it public.
 
