Add dashboards to other functionality list for categories page

--- a/product/categories/index.html.md.erb
+++ b/product/categories/index.html.md.erb
@@ -320,6 +320,11 @@ Maybe we should make our features easier to search to replace the section below.
 
 Internal Customers: [Create:Gitaly](#gitaly-group), [Enablement section](#enablement-section), [SaaS Platforms section](#saas-platforms-section), [Infrastructure Department](/handbook/engineering/infrastructure/), [Support Department](/handbook/support/), [Customer Success](/handbook/customer-success/), [Contributor Success](/handbook/engineering/quality/contributor-success/)
 
+### Other functionality in [Analytics](/handbook/product/categories/#analytics-stage)
+
+#### [Product Analytics group](https://about.gitlab.com/handbook/product/categories/#product-analytics-group)
+- [Analytics Dashboards](https://docs.gitlab.com/ee/user/product_analytics/#product-analytics-dashboards) - used by many groups to add visualizations or provide pre-configured dashboards to users
+
 ### Facilitated functionality
 
 Some product areas are have a broad impact across multiple stages. Examples of this include, among others:
@@ -327,6 +332,7 @@ Some product areas are have a broad impact across multiple stages. Examples of t
 - Shared project views, like the [project](https://docs.gitlab.com/ee/user/project/#projects) overview and settings page.
 - Functionality specific to the [admin area](https://docs.gitlab.com/ee/user/admin_area/settings/) and not tied to a feature belonging to a particular stage.
 - UI components available through our design system, [Pajamas](https://design.gitlab.com/).
+- Dashboards for displaying analytics, such as Product Analytics, Value Stream Analytics, and others.
 
 While the mental models for these areas are maintained by specific stage groups, everyone is encouraged to contribute within the guidelines that those teams establish. For example, anyone can contribute a new setting following the established guidelines for Settings. When a contribution is submitted that does not conform to those guidelines, we merge it and "fix forward" to encourage innovation.
 
