Update ops - package stage section to include new groups

--- a/development/ops/index.html.md.erb
+++ b/development/ops/index.html.md.erb
@@ -25,8 +25,9 @@ The following teams comprise the sub-department:
     - Pipeline Authoring - [handbook](/handbook/engineering/development/ops/verify/pipeline-authoring/), jtbd
     - Pipeline Insights - [handbook](/handbook/engineering/development/ops/verify/pipeline-insights/), [jtbd](/handbook/engineering/development/ops/verify/pipeline-insights/JTBD/)
     - Runner - [handbook](/handbook/engineering/development/ops/verify/runner/), jtbd
-- Package stage - [handbook](/handbook/engineering/development/ops/package/)
-    - Package - [handbook](/handbook/engineering/development/ops/package/), [jtbd](/handbook/engineering/development/ops/package/jtbd/)
+- Package stage - [handbook](/handbook/engineering/development/ops/package/), [jtbd](/handbook/engineering/development/ops/package/jtbd/)
+    - Container Registry - [handbook](/handbook/engineering/development/ops/package/container-registry/)
+    - Package Registry - [handbook](/handbook/engineering/development/ops/package/package-registry/)
 - Release stage
     - Release - [handbook](/handbook/engineering/development/ops/release/), [jtbd](/handbook/engineering/development/ops/release/jtbd/)
 - Configure stage
