--- a/development/ops/package/jtbd/index.html.md.erb
+++ b/development/ops/package/jtbd/index.html.md.erb
@@ -1,6 +1,6 @@
 ---
 layout: handbook-page-toc
-title: Package Group - The most important use cases for our customers
+title: Package Stage - The most important use cases for our customers
 ---
 
 ## On this page
