--- a/product/ux/index.html.md.erb
+++ b/product/ux/index.html.md.erb
@@ -61,65 +61,7 @@ Personas should be:
 - **Assessing Category Maturity:** We listen to our users and grade the maturity of our product based on user performance and feedback. [Assessing Category Maturity](/handbook/product/ux/category-maturity/) outlines the methodology we use for these evaluations.
 - **Technical Documentation:** Our users need reliable documentation, as it helps keep track of all aspects of a platform and it improves on the quality of a software product. We manage [docs.gitlab.com](https://docs.gitlab.com/), as well as related processes and tooling.
 - **First Look:** Inviting users into everything we do is important to us. [First Look](https://about.gitlab.com/community/gitlab-first-look/) is our user engagement and research participant recruiting program, which enables us to connect with our users and get their thoughts on our product.
-
-* **UX Showcase:** Collaboration is one of our values. <%= data.ux_showcase.about %>
-
-## FY23 direction
-
-GitLab believes strongly in the impact that usability can have on our company's health. So strongly, in fact, that our e-group incorporated [enterprise-leading usability](https://about.gitlab.com/company/strategy/#2-build-on-our-open-core-strength) into the three-year company strategy and committed to raising our SUS score to greater than 77 during that time period. That's strong evidence of the value we place on creating a product that users love and want to use.
-
-In FY23, we will continue to build on our [FY22 Direction](/handbook/product/ux/ux-direction) by using the industry standard [McKinsey Design Index (MDI)](https://www.mckinsey.com/business-functions/mckinsey-design/our-insights/the-business-value-of-design) and [System Usability Scale (SUS) score](/handbook/product/ux/performance-indicators/#perception-of-system-usability) as frameworks for thinking about and measuring UX impact.
-
-### MDI and the business value of design
-
-> “Top-quartile MDI scorers increased their revenues and total returns to shareholders (TRS) substantially faster than their industry counterparts did over a five-year period—-**32 percentage points higher revenue growth and 56 percentage points higher TRS growth for the period as a whole.**” - McKinsey & Company Report on [The business value of design](https://www.mckinsey.com/business-functions/mckinsey-design/our-insights/the-business-value-of-design)
-
-In a five-year study of over 300 publicly listed companies, McKinsey uncovered four MDI themes correlated with improved financial performance: Analytical leadership, Cross-functional talent, Continuous iteration, and User experience. We will focus on these categories as themes for our FY23 Direction.
-
-### System usability scale
-
-We’ve been [tracking](/handbook/product/ux/performance-indicators/#perception-of-system-usability) our [System Usability Scale](/handbook/product/ux/performance-indicators/system-usability-scale/) score since Q1 of FY20, so we now have a long-term view into how users perceive our product experience. While our score is above average, it has declined quarter over quarter. We store our SUS data for each quarter in Sisense, which you can find using the [SUS Database](https://about.gitlab.com/handbook/product/ux/sus-database/) page.
-
-### Actionable steps
-
-Following is a list of where our UX team will focus in FY23 to improve our SUS score. Often, but not always, we will use this list as a starting place for our quarterly OKRs.
-
-It’s important to note that this list isn’t exhaustive. Instead, we've focused on areas that the UX team can achieve independently, while we still continue to collaborate with our product development partners on other company priorities.
-
-**Analytical leadership:** Measure and drive design performance with the same rigor as revenues and costs.
-
-| Goal | DRI | Links | Completion Status |
-| ---- | --- | ----- | ----------------- |
-| Establish a repeatable usability benchmarking process | [Ben Leduc-Mills](https://gitlab.com/leducmills)  | [Epic](https://gitlab.com/groups/gitlab-org/-/epics/7373)  | Complete |
-
-**Cross-functional talent:** Make user-centric design everyone’s responsibility.
-
-| Goal | DRI | Links | Completion Status |
-| ---- | --- | ----- | ----------------- |
-| Improve product usability and docs by engaging Technical Writers earlier in the design/development process |  [Susan Tacker](https://gitlab.com/susantacker)   |   [Best practices identified by research](https://gitlab.com/gitlab-org/technical-writing/-/issues/596)    | Complete |
-| Make documentation easier to find and read based on UXR feedback and industry-standard approaches | [Susan Tacker](https://gitlab.com/susantacker)   |  [Epic](https://gitlab.com/groups/gitlab-org/-/epics/4602)    | Ongoing |
-| Better support cross-stage work by increasing end-to-end product knowledge of Product Design Managers |  [Rayana Verissimo](https://gitlab.com/rayana)   |       | Not prioritized |
-| Fully participate in the cross-functional prioritization process |  [Christie Lenneville](https://gitlab.com/clenneville)   | [Q3 OKR](https://gitlab.com/gitlab-org/gitlab-design/-/issues/2041) | Complete |
-
-**Continuous iteration:** De-risk development through continual listening, testing, and iterating with end users.
-
-| Goal | DRI | Links | Completion Status |
-| ---- | --- | ----- | ----------------- |
-| Improve product experience by implementing Actionable Insights | [Lauren Evans](https://gitlab.com/laurenevans)  |  [Epic](https://gitlab.com/groups/gitlab-org/-/epics/7367)    | Complete |
-| Build UXR subject matter expertise through a Foundational Research Framework | [Will Leidheiser](https://gitlab.com/wleidheiser) |  [Epic](https://gitlab.com/groups/gitlab-org/-/epics/7414)   | Complete |
-| Offer an opinionated view of user needs through user-centric roadmaps | [Justin Mandell](https://gitlab.com/jmandell) |  [Q1](https://gitlab.com/gitlab-org/gitlab-design/-/issues/1873), [Q2](https://gitlab.com/gitlab-org/gitlab-design/-/issues/1953), [Q3](https://gitlab.com/gitlab-org/gitlab-design/-/issues/2023), Q4     | Ongoing; significant progress made |
-| Solve customer problems broadly and in an integrated way with holistic iterations on high-usage workflows | [Marcel van Remmerden](https://gitlab.com/mvanremmerden) |  | Ongoing |
-
-**User experience:** Break down internal walls between physical, digital, and service design.
-
-| Goal | DRI | Links | Completion Status |
-| ---- | --- | ----- | ----------------- |
-| Enable Development to complete committed Pajamas migrations by establishing formal migration processes, supporting cross-functional communication, and completing accessibility audits | [Taurie Davis](https://gitlab.com/tauriedavis)  | [Migration process documentation MR](https://gitlab.com/gitlab-org/frontend/pajamas-adoption-scanner/-/merge_requests/48)      | Complete |
-| Reduce the amount of UX debt for an improved user experience across the product | [Valerie Karnes](https://gitlab.com/vkarnes) |       | Ongoing; included in SUS-impacting metrics |
-| Elevate design quality by consistently providing constructive design feedback | [Blair Christopher](https://gitlab.com/badnewsblair)  | [Issue](https://gitlab.com/gitlab-org/gitlab-design/-/issues/2054)    | Complete |
-| Simplify Navigation so that it is intuitive across user personas | [Taurie Davis](https://gitlab.com/tauriedavis)   | [Q3 Navigation OKR](https://gitlab.com/groups/gitlab-org/-/epics/8481)      | Large progress in FY23, ongoing |
-| Identify customer pain points from process deficiencies through the creation of service blueprints | [Jacki Bauer](https://gitlab.com/jackib) |   [Issue](https://gitlab.com/gitlab-com/www-gitlab-com/-/issues/13056)    | Deprioritized |
-| Increase designer's end-to-end product knowledge and exposure through MR reviews | [Valerie Karnes](https://gitlab.com/vkarnes) |  [MR](https://gitlab.com/gitlab-com/www-gitlab-com/-/merge_requests/101847)  | Complete |
+- **UX Showcase:** Collaboration is one of our values. <%= data.ux_showcase.about %>
 
 ## Meet Some of Our Team Members
 
