Remove UX from the Engineering Career Framework

--- a/career-development/matrix/engineering/_engineering_career_matrix_nav.erb
+++ b/career-development/matrix/engineering/_engineering_career_matrix_nav.erb
@@ -4,7 +4,6 @@
 [Development](/handbook/engineering/career-development/matrix/engineering/development/)   |
 [Infrastructure](/handbook/engineering/career-development/matrix/engineering/infrastructure/) |
 [Quality](/handbook/engineering/career-development/matrix/engineering/quality/) |
-[Support](/handbook/engineering/career-development/matrix/engineering/support/) |
-UX
+[Support](/handbook/engineering/career-development/matrix/engineering/support/)
 
 ***
