Add service ownership

--- a/infrastructure/team/reliability/practices.html.md.erb
+++ b/infrastructure/team/reliability/practices.html.md.erb
@@ -19,6 +19,16 @@ The following people are members of the Reliability:Practices team
 
 <%= direct_team(manager_slug: 'kwanyangu')%>
 
+## Ownership
+
+Currently, Practices team supports Infrastructure Reliability related to the below services;
+
+| Service | Description |
+| ------- | ----------- |
+| Git, Cluster | Systems:Gitaly|
+| Runner, Runner SaaS | Verify:Runner |
+| Fulfillment | Fulfillment:Fulfillment Platform |
+
 ## Scope of Work
 
 Requests not in the scope below should refer to Reliability team's defined [General Workflow](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/#how-we-work--general-workflow) for prioritization and assignment.
