--- a/product/ux/ux-research/tracking-research-projects/index.html.md.erb
+++ b/product/ux/ux-research/tracking-research-projects/index.html.md.erb
@@ -36,6 +36,14 @@ Collectively, these data visualizations helps us understand more about the volum
     <p>You must set a <code>PERISCOPE_EMBED_API_KEY</code> environment variable to render this chart.</p>
 <% end %>
 
+<% if ENV['PERISCOPE_EMBED_API_KEY'] %>
+  <div>
+    <embed width="100%" height="400" src="<%= signed_periscope_url(chart: 15225364, dashboard: 1063612, embed: 'v2') %>">
+  </div>
+  <% else %>
+    <p>You must set a <code>PERISCOPE_EMBED_API_KEY</code> environment variable to render this chart.</p>
+<% end %>
+
 
 
 
