docs(reliability:practices): add useful links table

--- a/infrastructure/team/reliability/practices.html.md.erb
+++ b/infrastructure/team/reliability/practices.html.md.erb
@@ -29,6 +29,14 @@ Currently, Practices team supports Infrastructure Reliability related to the bel
 | Runner, Runner SaaS | Verify:Runner |
 | Fulfillment | Fulfillment:Fulfillment Platform |
 
+## Useful Links
+
+| Workflow | [Issue Labels](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/issues.html#labels) |
+| Backlog | [Current Milestone](https://gitlab.com/groups/gitlab-com/gl-infra/-/boards/4696185) <br> [Service Backlog](https://gitlab.com/groups/gitlab-com/gl-infra/-/boards/4696185) |
+| Reaching us | [`#g_infra_practices`](https://gitlab.slack.com/archives/C04M6HVAY49) <br> [`#reliability-lounge`](https://gitlab.slack.com/archives/C03QC5KNW5N) <br> `@gitlab-org/reliability/practices`
+| Weekly Agenda | [Weekly alternative APAC/EMEA and EMEA/AMER](https://docs.google.com/document/d/1jKcIw0fRkcAN-vXQuvD0OUJpoxchjVOTqMYdGzeW87I/edit#heading=h.6lawfomkdqum) |
+| Achievements | [FY24 - Q1](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/17301) |
+
 ## Scope of Work
 
 Requests not in the scope below should refer to Reliability team's defined [General Workflow](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/#how-we-work--general-workflow) for prioritization and assignment.
