Update EP team handbook page by removing current OKR reference to Ally

--- a/quality/engineering-productivity/index.html.md.erb
+++ b/quality/engineering-productivity/index.html.md.erb
@@ -150,16 +150,33 @@ The Engineering Productivity team uses [modified prioritization and planning gui
 
 ## Active Quarter OKRs
 
-<iframe src="https://app.ally.io/public/bXJs2qbiOBjFf4M" class="dashboard-embed" height="1000" width="100%" style="border:none;"> </iframe>
+See [FY24Q1 Engineering Productivity OKRs(internal link)](https://gitlab.com/gitlab-com/gitlab-OKRs/-/work_items/122796026)
+
+- Obj: ARR - Improve Development Efficiency
+  - KR: Improve master stability from 94% to 97%
+  - KR: Implement dynamic test parallelization
+  - KR: Improve test intelligence accuracy
+- Obj: Product - Mature development tools
+  - KR: Deliver the first iteration of Development Satisfaction Score
+  - KR: Mature JH Validation Pipeline
+  - KR: GDK Performance Enhancements
+- Obj: Team Growth and Development
 
 ## Previous Quarter OKRs
 
-<iframe src="https://app.ally.io/public/HSTiKTDxLQ33iHS" class="dashboard-embed" height="1000" width="100%" style="border:none;"> </iframe>
+Note: Due to the switch to GitLab's OKR system, we no longer have the ability to view the OKRs from FY23Q4. A hard-copy was made of the state of these OKRs as of 2023-01-30.
+
+- Obj: Product: Increase quality with test efficiency & customer insights
+  - KR: Reduce Time to First Failure P80 from 33 minutes to 20 minutes, 60%
+  - KR: Improve master stability from 90% to 95%, 60%
+  - KR: Improve pipeline incident triage efficiency, 93%
 
 ## Engineering productivity team metrics
 
 The Engineering Productivity team creates metrics in the following sources to aid in operational reporting.
 
+- [Sisense Broken Master Pipeline Root Cause Analysis](https://app.periscopedata.com/app/gitlab/1082465/Master-Broken-Incidents-Root-Cause-Analysis)
+- [Sisense Engineering Productivity Dashboard](https://app.periscopedata.com/app/gitlab/1115916/Engineering-Productivity-Dashboard)
 - [Sisense Quality Engineering KPIs](https://app.periscopedata.com/app/gitlab/516343/Quality-KPIs)
 - [Sisense Engineering Productivity Sandbox](https://app.periscopedata.com/app/gitlab/496118/Engineering-Productivity-Sandbox)
 - [Sisense Engineering Productivity Pipeline](https://app.periscopedata.com/app/gitlab/564156/Engineering-Productivity---Pipeline)
