--- a/quality/contributor-success/index.html.md.erb
+++ b/quality/contributor-success/index.html.md.erb
@@ -12,7 +12,7 @@ description: "Contributor Success Team"
 ## Common Links
 
 | **GitLab Team Handle** | [`@gitlab-org/quality/contributor-success`](https://gitlab.com/gitlab-org/quality/contributor-success) |
-| **Slack Channel** | [`#g_contributor_success`](https://gitlab.slack.com/archives/C02R0NE6P6C)
+| **Slack Channel** | [`#g_contributor_success`](https://gitlab.slack.com/archives/C02R0NE6P6C) & [`#g_contributor_success-confidential`](https://gitlab.slack.com/archives/C04KENT97K7)
 | **Slack Channels from initiatives that we help drive**| [`#leading_organizations`](https://gitlab.slack.com/archives/C03KC7N184D)  |
 | **Team Boards** | [`gitlab-org/-/boards/4296693`](https://gitlab.com/groups/gitlab-org/-/boards/4296693) |
 | **Issue Tracker** | [`gitlab-org/quality/contributor-success/team`](https://gitlab.com/gitlab-org/quality/contributor-success/team/-/issues) |
@@ -21,7 +21,7 @@ description: "Contributor Success Team"
 
 ## Sub-pages
 
-| **Workflows** | [Contributor Success Workflows](/handbook/engineering/quality/contributor-success/community-contributors-workflows.html) |
+| **Workflows** | [Contributor Success Contributor Workflows](/handbook/engineering/quality/contributor-success/community-contributors-workflows.html) |
 | **Metrics** | [Contributor metrics & dashboards](/handbook/engineering/quality/contributor-success/metrics.html) |
 | **Contributing Organization Tracking** | [Contributing Organization Tracking](/handbook/engineering/quality/contributor-success/contributing-org-tracker.html) |
 | **A Contributor's User Journey** | [User Journey](/handbook/engineering/quality/contributor-success/user-journey.html) |
@@ -38,6 +38,8 @@ The goal of the team is to increase the technical improvements and efficiency of
 ambition of [1000+ contributors with merged MRs per month to GitLab](/company/strategy/#2-build-on-our-open-core-strength).
 
 ### FY23 Direction
+
+Note: FY24 Direction will come up shortly
 
 In FY23 we will be focused on growing the number of unique new monthly contributors, reducing [Open Community MR Age
 (OCMA)](#open-community-mr-age-ocma) and increasing [MRARR](#mrarr). This will increase development velocity without
@@ -106,6 +108,9 @@ to the program.
 * Engineering representative that can ride along with the [Developer evangelist](/job-families/marketing/developer-evangelist/) and [Code contributor program manager](/job-families/marketing/code-contributor-program-manager/).
 * Improve community recognition system and awards in collaboration with the [Community Relations team](/handbook/marketing/community-relations/).
 * Participate in GitLab's overall Engineering open source outreach events and processes.
+* [Triage community issues](https://about.gitlab.com/handbook/engineering/quality/issue-triage/) to be picked up by the community or GitLab team members
+* [Triage community merge requests](https://about.gitlab.com/handbook/engineering/quality/merge-request-triage/#partial-triage-gitlab-org) from the daily merge request coach report
+* [Review merge requests](https://docs.gitlab.com/ee/development/code_review.html) assigned as a merge request coach or from the reviewer roulette 
 
 ## Team Members
 
@@ -163,29 +168,39 @@ Note: Due to the switch to GitLab's OKR system, we no longer have the ability to
 
 We have the following Performance Indicators
 
-#### [Unique Wider Community Contributors per Month](/handbook/engineering/quality/performance-indicators/#unique-wider-community-contributors-per-month)
+#### Unique Wider Community Contributors per Month
 
-- Target: increase to be greater than 150 per month by FY23Q4
 - Activities:
   - Partnership with Community Relations and Technical Marketing team.
-  - Hold community office hours
-  - Hold hackathons
-  - Allow running of QA tests from forks
-  - Shorten the CI runtime for community contributions (in forks)
+  - Hold community office hours.
+  - Hold hackathons.
+  - Allow running of QA tests from forks.
+  - Shorten the CI runtime for community contributions (in forks).
 
-#### [Open Community MR Age (OCMA)](/handbook/engineering/quality/performance-indicators/#open-community-mr-age)
+More details can be found at the [Unique Wider Community Contributors per Month Quality PI section](/handbook/engineering/quality/performance-indicators/#unique-wider-community-contributors-per-month)
 
-- Target: decrease to lower than 30 days by FY23Q4
+#### Leading Organizations MR Time-to-review
+
+- Activities:
+  - Check in with the Leading Organizations.
+  - Hold contribution trainings.
+  - Connect Leading Organization contributors with team members to incentivize a faster review cycle.
+
+More details can be found at the [Leading Organizations MR Time-to-review Quality PI section](/handbook/engineering/quality/performance-indicators/#leading-organizations-mr-time-to-review)
+
+#### Open Community MR Age (OCMA)
+
 - Activities:
   - Shorten CI time
   - Improve Community Contribution automation
   - Enable running QA tests on forks
   - Increase number of coaches
-  - Partner with Engineering Productivity to provide feedback to improve contribution tooling (currently GDK).      
+  - Partner with Engineering Productivity to provide feedback to improve contribution tooling (currently GDK).
 
-#### [MRARR](/handbook/engineering/quality/performance-indicators/#mrarr)
+More details can be found at the [OCMA Quality PI section](/handbook/engineering/quality/performance-indicators/#open-community-mr-age)
 
-- Target: increase to 400M MR$ by FY23Q4
+#### MRARR
+
 - Activities:
   - Reach out to top tier enterprise customers
   - Help take-on inactive customer contribution to completion & merge
@@ -197,21 +212,25 @@ We have the following Performance Indicators
 Please see [Contributing Orgs tracker](contributing-org-tracker.html) for details how to onboard or offboard a GitLab
 account from being linked to a customer account, and being counted into the MRARR metric.
 
-#### [Community Coaches per Month](/handbook/engineering/quality/performance-indicators/#community-mr-coaches-per-month)
+More details can be found at the [MRARR Quality PI section](/handbook/engineering/quality/performance-indicators/#mrarr)
 
-- Target: increase to be greater than 50 per month by FY23Q3
+#### Community Coaches per Month
+
 - Activities:
   - Work with Development Department (Christopher L, VP of Development) for volunteers.
   - Work with UX Department (Christie L, VP of UX) Christie for volunteers.
   - Refresh MR coaches as “Community coaches” so non-code review work can be encouraged (design, etc)
   - Launch training materials for coaches
 
-#### [Community Contribution MRs as Features per Month](/handbook/engineering/quality/performance-indicators/#community-contribution-mrs-added-as-features-per-month)
+More details can be found at the [Community Coaches per Month Quality PI section](/handbook/engineering/quality/performance-indicators/#community-mr-coaches-per-month)
 
-- Target: increase to 30% by FY23Q2
+#### Community Contribution MRs as Features per Month
+
 - Activities:
   - Encourage features at Community relations hackathons.
   - Published list of feature issues with Marketing team.
+
+More details can be found at the [Community Contribution MRs as Features per Month Quality PI section](/handbook/engineering/quality/performance-indicators/#feature-community-contribution-mrs)
 
 ### How do we collaborate with other teams?
 
@@ -231,6 +250,7 @@ graph TD
     H[Wider Community]
     H --> I[Core Team]
     H --> J[Heroes]
+    H --> K[Leading Organizations]
 
     click B "/handbook/marketing"
     click C "/handbook/engineering"
@@ -240,8 +260,58 @@ graph TD
     click G "/handbook/marketing/community-relations/evangelist-program"
     click I "/community/core-team"
     click J "/community/heroes"
+    click K "/handbook/marketing/community-relations/leading-organizations/"
     
 ```
+
+## How we plan work
+
+The team uses the [Contributor Growth board](https://gitlab.com/groups/gitlab-org/-/boards/4879276). 
+Everything that we're working actively is present above the cut-line. Our planning is always focussed on achieving our PIs & [OKRs](#okrs).
+
+5 labels are present
+
+* `~contributorgrowth::velocity`
+  * Everything that relates to [Improving Contribution Velocity](/handbook/engineering/open-source/growth-strategy.html#improve-contribution-velocity) as defined by our [Open Source Growth Strategy](/handbook/engineering/open-source/growth-strategy.html)
+* `~contributorgrowth::increase value`
+  * Everything that relates to [Increasing Contribution Value](/handbook/engineering/open-source/growth-strategy.html#increase-contribution-value) as defined by our [Open Source Growth Strategy](/handbook/engineering/open-source/growth-strategy.html)
+* `~contributorgrowth::expand outreach`
+  * Everything that relates to [Expanding Outreach](/handbook/engineering/open-source/growth-strategy.html#expand-outreach) as defined by our [Open Source Growth Strategy](/handbook/engineering/open-source/growth-strategy.html)
+* `~contributorgrowth::scale the community`
+  * Everything that relates to [Scaling the Community](/handbook/engineering/open-source/growth-strategy.html#scale-the-community) as defined by our [Open Source Growth Strategy](/handbook/engineering/open-source/growth-strategy.html)
+* `~contributorgrowth::internal`
+  * Everything that relates to internal processes such as onboarding, internal issues such as tooling or customer & company specific tasks.
+
+
+### Monthly planning meeting
+
+Once a month, in the 3rd week of the month, we use the [Contributor Success stand-up](#contributor-success-stand-up) to review how we progressed. 
+We define what goes above the cutline and what should go below the cutline in order to meet our OKRs & PIs for the 
+quarter. We re-assess the importance and make sure to disseminate our learnings.
+
+## Contributor Success Retrospective
+
+Every 2 weeks we hold an asynchronous retrospective in the [`#g_contributor_success-confidential`](https://gitlab.slack.com/archives/C04KENT97K7) channel using Geekbot.
+Questions asked are
+
+* What should we start?
+* What should we stop?
+* What should we continue?
+
+Contributor Success' DRI is responsible for summarizing the discussion and creating an issue in the team tracker 
+[`gitlab-org/quality/contributor-success/team`](https://gitlab.com/gitlab-org/quality/contributor-success/team/-/issues) 
+so that it can be easily retrieved in the future. 
+
+Contributor Success' DRI is responsible for taking the feedback to the monthly planning meeting.
+
+## Contributor Success stand-up
+
+The purpose of this stand-up is to collaborate between teams members of Contributor Success. This is a team-specific
+meeting to check in on blockers, progress and ways to think differently & iterate towards our goals.
+
+We're reviewing the Contributor Growth weekly, making sure our active work is aligned towards our OKRs and towards the new insights we get from our PIs.
+
+- Agenda - <https://docs.google.com/document/d/1chIzCdg1CNRrRRuYR7c7OW_BF1mBxKFTJoXyP2HLt4E/edit#heading=h.o6qzal1u0b7i>
 
 ## Contributor Growth stand-up
 
@@ -250,4 +320,3 @@ initiatives for how to reach our goal of 1000 contributors per month. This is a 
 initiative: [https://gitlab.com/groups/gitlab-com-top-initiatives/-/epics/8](https://gitlab.com/groups/gitlab-com-top-initiatives/-/epics/8)
 
 - Agenda - <https://docs.google.com/document/d/11S48qIoFzKxZAdMznlUm5-Pob4EEBb8DNv2YIBLw9uw/edit>
-- Legacy Agenda - <https://docs.google.com/document/d/1AOgqaslnq-WI1ICSZ1NzSnALf1Va4D5qAD191icAoSI/edit#>
