fix: Reliability:Practices table of content

--- a/infrastructure/team/reliability/practices.html.md.erb
+++ b/infrastructure/team/reliability/practices.html.md.erb
@@ -6,6 +6,9 @@ title: "Reliability:Practices Team"
 ## On this page
 {:.no_toc .hidden-md .hidden-lg}
 
+- TOC
+{:toc .hidden-md .hidden-lg}
+
 ## Mission
 
 The Practices team is a subgroup of the [Reliability Team](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/).
