Fix Link formatting to Web IDE Beta instructions

--- a/git-page-update/index.html.md.erb
+++ b/git-page-update/index.html.md.erb
@@ -219,7 +219,7 @@ For more in-depth details on setting up and using the local development environm
 We are happy to have you join our company and to include you in our [team page](/company/team/)! [A sync](/handbook/people-group/engineering/onboarding/#sync-to-team-page) will add a basic entry for you on our team page on your third day of employment at GitLab. You are invited to personalize this entry and add more information to it.
 
 Ask anyone in the company for help if you need it - you can use either the #mr-buddies or #questions Slack channel for this purpose. There are **three** ways to update the website.
-1. [Add your info on GitLab.com using the Web IDE](https://about.gitlab.com/handbook/git-page-update/#method-1A-add-your-info-on-gitlabcom-using-the-web-ide) or [Web IDE Beta]((https://about.gitlab.com/handbook/git-page-update/#method-1B-add-your-info-on-gitlabcom-using-the-web-ide-beta))
+1. [Add your info on GitLab.com using the Web IDE](https://about.gitlab.com/handbook/git-page-update/#method-1A-add-your-info-on-gitlabcom-using-the-web-ide) or [Web IDE Beta](https://about.gitlab.com/handbook/git-page-update/#method-1B-add-your-info-on-gitlabcom-using-the-web-ide-beta)
 2. [Add your info on GitLab.com using the 'web interface'](https://about.gitlab.com/handbook/git-page-update/#method-2-add-your-info-on-gitlabcom-using-the-web-interface)
 3. [Add your info using a Local Git clone (using the terminal and an IDE)](https://about.gitlab.com/handbook/git-page-update/#method-3-add-your-info-using-a-local-git-clone-using-the-terminal-and-an-ide)
 
