Swap and add new DRIs for weekly issue

--- a/development/dev/plan/index.html.md.erb
+++ b/development/dev/plan/index.html.md.erb
@@ -237,11 +237,12 @@ The Engineering Managers in the Plan stage alternate each week as the DRIs. Ther
 
 | Issue creation (auto) | DRI |
 |---   | ---       |
-| 2023-01-30 | Jarka Košanová |
-| 2023-02-06 | Kushal Pandya |
+| 2023-02-06 | Brandon Labuschagne |
 | 2023-02-13 | Donald Cook |
 | 2023-02-20 | John Hope |
-| 2023-02-27 | Brandon Labuschagne |
+| 2023-02-27 | Kushal Pandya |
+| 2023-03-06 | Brandon Labuschagne |
+| 2023-03-13 | Donald Cook |
 
 #### Links
 
