Update the Configure page

--- a/development/ops/configure/index.html.md.erb
+++ b/development/ops/configure/index.html.md.erb
@@ -46,7 +46,7 @@ work as possible back to the open source community.
 
 ### Product Indicators
 
-Value is measured by **the number of deployment pipelines going through configure categories's features (**either K8s, Auto DevOps, Serverless or IaC in general). This is a good approximation of customer value because GitLab users ultimately want either their infrastructure or something of their infrastructure deployed.
+Value is measured by **the number of deployment pipelines going through configure categories's features (**either Kubernetes, Auto DevOps, Serverless or IaC in general). This is a good approximation of customer value because GitLab users ultimately want either their infrastructure or something of their infrastructure deployed.
 
 We break down this metric into input metrics by product category and might come up with a further breakdown of the metrics when necessary.
 
@@ -204,7 +204,7 @@ A technical discovery meeting consists of:
 - The PM will open the conversation either by describing the use case/scenario or by recording a quick video about it.
 - The meetings are agenda first, everyone needs to type their main comments in the agenda before the first meeting, and notes must be taken, if the agenda is empty the meeting is cancelled.
 - One host is decided for every meeting, and they are responsible to drive the conversation forward.
-- In the last meeting someone is appointed to revert the conversation either in the original issue or a technical document.
+- In the last meeting someone is appointed to summarize the conversation either in the original issue or a technical document.
 
 ### Planning
 
