Update handbook to remove old STD information and move US Leave policies to US LOA page

--- a/people-policies/leave-of-absence/us/index.html.md.erb
+++ b/people-policies/leave-of-absence/us/index.html.md.erb
@@ -34,8 +34,8 @@ Below are the GitLab and US-specific leave policies available to US team members
 
 | Leave Program | Total Time Off | Job Protection |
 |:---:|:---:|:---:|
-| [Parental Leave](/handbook/total-rewards/benefits/general-and-entity-benefits/#parental-leave) | 16 weeks | Yes* |
-| [Family Medical Leave Act<br>(FMLA)](/handbook/total-rewards/benefits/general-and-entity-benefits/inc-benefits-us/#gitlab-inc-united-states-leave-policy) | Up to 12 weeks | Yes* |
+| [Parental Leave](/handbook/people-policies/leave-of-absence/us/#parental-leave) | 16 weeks | Yes* |
+| [Family Medical Leave Act<br>(FMLA)](/handbook/people-policies/leave-of-absence/us/#gitlab-inc-united-states-leave-policy) | Up to 12 weeks | Yes* |
 | [California Family Rights Act (CFRA)](https://www.edd.ca.gov/disability/faqs-fmla-cfra.htm) | Up to 12 weeks** | Yes |
 | Military Leave (USERRA) | Cumulative 5 years | Yes, up to 5 years* |
 | Unpaid Personal Leave | Up to 30 days<br>Requests in excess of 30 days require functional VP and group People Business Partner approval | No |
@@ -46,32 +46,35 @@ Below are the GitLab and US-specific leave policies available to US team members
 
 | Leave Program | Pay Calculations |
 |:---:|:---:|
-| [Parental Leave](/handbook/total-rewards/benefits/general-and-entity-benefits/inc-benefits-us/#payroll-processing-during-parental-leave) | 100% paid by GitLab (minus any State Disability and/or Paid Family Leave benefits) |
-| [Family Medical Leave Act<br>(FMLA)](/handbook/total-rewards/benefits/general-and-entity-benefits/inc-benefits-us/#payroll-processing-during-fmla) | 66.67% (STD) + 33.3% paid by GitLab per week<br>After 12 weeks:  <br>     66.67% (LTD) per month |
+| [Parental Leave](/handbook/people-policies/leave-of-absence/us/#payroll-processing-during-parental-leave) | 100% paid by GitLab (minus any State Disability and/or Paid Family Leave benefits) |
+| [Family Medical Leave Act<br>(FMLA)](/handbook/people-policies/leave-of-absence/us/#payroll-processing-during-fmla) | 66.67% (STD) + 33.3% paid by GitLab per week<br>After 12 weeks:  <br>     66.67% (LTD) per month |
 | California Family Rights Act<br>(CFRA) | First 8 weeks:  60% (SDI/PFL) + 6.66% (STD) + 33.3% paid by GitLab<br>8-12 weeks:  60% (SDI - if applicable) + 6.66% (STD) + 33.3% paid by GitLab<br>After 12 weeks:  66.67% LTD paid by Cigna monthly (if eligible) |
 | [Military Leave (USERRA)](/handbook/people-policies/leave-of-absence/us/#compensation) | First 25 days:  paid 100% by Gitlab<br>After 25 days:  Unpaid |
 | Unpaid Personal Leave | Unpaid |
 
-If you live in a state where disability or paid family leave benefits are available, you will be required to apply for these benefits, and if approved GitLab will supplement any gaps. Please refer to GitLab's [Parental Leave](/handbook/total-rewards/benefits/general-and-entity-benefits/inc-benefits-us/#payroll-processing-during-parental-leave) policy for more information.
+If you live in a state where disability or paid family leave benefits are available, you will be required to apply for these benefits, and if approved GitLab will supplement any gaps. Please refer to GitLab's [Parental Leave](/handbook/people-policies/leave-of-absence/us/#payroll-processing-during-parental-leave) policy for more information.
 
 ## What Happens Next?
-
 Team members can use this [checklist](https://docs.google.com/document/d/1NCf6NcDkSn5TlBcPLnP0eyjxIWOQ5lVfRVR_cvdZ9zI/edit?usp=sharing) as a reference for what steps to complete before, during, and after you return from leave. For questions specific to your leave or pay, please contact `leaves@gitlab.com`. _This checklist is currently in its first iteration. Please continue to check back for updates._
 
-### Applying for Leave
-
-- [Apply For Parental Leave in the US](/handbook/total-rewards/benefits/general-and-entity-benefits/inc-benefits-us/#parental-leave)
-- [Apply for Family Medical Leave Act (FMLA)](/handbook/total-rewards/benefits/general-and-entity-benefits/inc-benefits-us/#how-to-apply)
-- [Apply for Military Leave](/handbook/people-policies/leave-of-absence/us/#notification-of-supervisormanager)
-
-## State-Specific Leaves
-
+### State-Specific Leaves
 Each US state varies when it comes to types of leave employers are required to allow employees to take. Employees of GitLab Inc. are eligible for our paid time off policy and our Sick Time policy; which will run concurrently with any State or FMLA leave entitlement. Please refer to the [Sick Time Procedures - USA](/handbook/paid-time-off/#sick-time-procedures---usa) or [Paid Time Off](/handbook/paid-time-off/#a-gitlab-team-members-guide-to-time-off) policy for more information.
+
+### The Family Medical Leave Act (FMLA)
+The Family Medical Leave Act [FMLA](https://www.dol.gov/agencies/whd/fmla) provides eligible U.S team members up to 12-weeks, or up to 26- workweeks (in one 12 month period to care for an injured service member), unpaid time away from work for their own serious health condition, to care for a family member with a serious health condition, or to bond with a newborn or newly adopted child.  FMLA eligible leave time can be taken in continuous segments or intermittently as certified by a physician.  If FMLA is used to bond with a child, or newly adopted child, all eligible time must be used prior to the child’s first birthday or date of adoption. For more information  please see [Employee Rights Under the Family Medical Leave Act](https://www.dol.gov/sites/dolgov/files/WHD/legacy/files/fmlaen.pdf). 
+
+Team members must have 12 months of continuous service and 1250 hours worked in the year immediately before the start of their leave to be eligible for FMLA leave.  Working hours are calculated as actual hours worked and does not include PTO or vacation time.  GitLab calculates FMLA eligibility as a “rolling” 12-month period measured backward from the date of any FMLA leave usage. (Each time a team member takes FMLA leave, the remaining leave is the balance of the 12 weeks not used during the 12 months immediately before the FMLA leave is to start.)   All FMLA entitled leave will run concurrently with any State specific leave and disability or paid family leave programs (if applicable), GitLab's sick leave policy (including COVID leave), and/or Short-Term disability benefits.  GitLab’s Flexible PTO policy can not be used to delay, extend, or in lieu of FMLA.
+
+#### How to Apply:
+Any medical related absence (for yourself or a family member) requiring you to be away from work for at least 3 but no more than 5 days (either continuously or non-continuous but related to the same condition) must be reported to leaves@gitlab.com. You will be contacted within 24-48 business hours (whenever possible) and provided with information regarding your request.  If approved, please submit your time away via PTO by Deel request utilizing the `Out Sick` option.
+
+#### Payroll Processing During FMLA
+The Absence Management team will review the team members eligibility for Short-Term Disability benefits, State pay benefits, and/or GitLab's Sick Time policy, and will communicate how the team member can expect to receive their pay while on leave.
 
 ### California Family Rights Act (CFRA)
 GitLab will grant time off to eligible team members in accordance with the requirements of the California Family Rights Act (“CFRA”) and the federal Family and Medical Leave Act (Fed-FMLA). Where both the CFRA and Fed-FMLA apply, the leave provided by each will count against the team member’s entitlement under both laws and must be taken concurrently. A team member who is eligible for leave under only one of these laws will receive benefits in accordance with that law only. In any case, team members will be eligible for the most generous benefits available under applicable law.
 
-The following policy addresses team member rights under the CFRA only. Team members should refer to [GitLab’s Team Member Handbook](/handbook/total-rewards/benefits/general-and-entity-benefits/inc-benefits-us/#gitlab-inc-united-states-leave-policy) for additional detail regarding the Fed-FMLA. All questions concerning this policy should be directed to leaves@gitlab.com.
+The following policy addresses team member rights under the CFRA only. Team members should refer to [GitLab’s Team Member Handbook](/handbook/people-policies/leave-of-absence/us/#gitlab-inc-united-states-leave-policy) for additional detail regarding the Fed-FMLA. All questions concerning this policy should be directed to leaves@gitlab.com.
 
 **Team Member Eligibility**
 
