Add Category Investment Statuses

--- a/product/categories/index.html.md.erb
+++ b/product/categories/index.html.md.erb
@@ -156,6 +156,17 @@ it's also an expensive add and we don't create groups just for a cleaner
 hierarchy; it has to be justified from a [span-of-control](/company/team/structure/#management-group)
 perspective or limits to what one product manager can handle.
 
+### Category Statuses 
+
+Categories can have varying level of investment and development work. There are four main investment statuses: 
+
+1. Accelerated - Top category for product strategy that has received additional investment in the next year
+1. Sustained - Categories where new features will be added in the next year
+1. Reduced - Categories where scope and ambition is decreased although, new features will still be added in the next year
+1. Maintenance - Categories where no new features will added 
+
+Typically, product direction pages will transparently state the investment status of the category for the fiscal year based on annual product themes and investment levels. 
+
 ## Changes
 
 The impact of changes to sections, stages and groups is felt [across the company](/company/team/structure/#product-groups).
