--- a/people-group/workday/tech-stack-guide-workday/index.html.md.erb
+++ b/people-group/workday/tech-stack-guide-workday/index.html.md.erb
@@ -45,7 +45,7 @@ Modules/functionality being implemented:
 
 | Workday will replace | Workday will enhance |Workday will integrate with |What remains the same in this phase|
 | ------ | ------ |------ |------ |
-| BambooHR (with a few exceptions to certain business processes) | Reporting, Auditing, Organization hierarchy, Management hierarchy, Business process workflows |Greenhouse, Culture Amp, Expensify, LawLogix, Modern Health, Navex, Netsuite, E-trade, ADP, Okta, Nominator bot, People Connect bot, Employment Automations | PTO by Deel, BambooHR Documents, BambooHR Contractor Invoices |
+| BambooHR (with a few exceptions to certain business processes) | Reporting, Auditing, Organization hierarchy, Management hierarchy, Business process workflows |Greenhouse, Culture Amp, Navan Expense, LawLogix, Modern Health, Navex, Netsuite, E-trade, ADP, Okta, Nominator bot, People Connect bot, Employment Automations | PTO by Deel, BambooHR Documents, BambooHR Contractor Invoices |
 
 > Details of each integration including frequency can be found in the [Workday Guide](/handbook/people-group/workday/workday-guide/#phase-1-integrations)
 
@@ -95,7 +95,7 @@ graph LR
     WD --> WK(Workato)
     WK --> MH[ModernHealth]
     WK --> LG[LawLogix]
-    WK --> EN[Expensify & Netsuite]
+    WK --> EN[Navan Expense & Netsuite]
     WK --> NX[Navex Global]
     WD --> EB(EIB)
     EB --> CA[Culture Amp]
