Document weekend shift swaps

--- a/infrastructure/incident-management/incident-manager-onboarding/index.html.md.erb
+++ b/infrastructure/incident-management/incident-manager-onboarding/index.html.md.erb
@@ -103,6 +103,10 @@ Example 2, Covering for someone.  Go to the [schedule in PagerDuty](https://gitl
 #### What role of Pagerduty shall I request?
 A **Limited User** is sufficient to be an Incident Manager.
 
+#### What if my local laws prohibit being required to work outside of normal work hours (nights and/or weekends)?
+
+Shifts are assigned based on the working hours that you selected during onboarding, but because PagerDuty is currently setup to automatically assign shifts, they may sometimes fall on a weekend. Our current process is to [swap shifts](/handbook/on-call/#swapping-on-call-duty), usually by asking for someone to take this shift in the #imoc_general channel.
+
 #### What if I work a shift on a weekend or holiday?
 
 When an Incident Manager shift includes a weekend the team member can shift their workweek to include that day (and exclude another day). As an example, if an Incident Manager shift includes Saturday, then the team member could plan their workweek for that week to be Tues-Sat.
